--- a/numpy_basics.ipynb
+++ b/numpy_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -207,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.01520245  0.31760492  0.48029266  0.52087331 -1.01995976]\n"
+      "[ 1.37771444 -1.44704832 -0.32921765 -0.77486437  0.18584024]\n"
      ]
     }
    ],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -228,11 +228,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.70059077  1.21971537]\n",
-      " [-1.990304    0.11238149]\n",
-      " [ 0.92774587  0.57935903]\n",
-      " [ 0.18602804  1.14806358]\n",
-      " [ 1.173989    0.23839278]]\n"
+      "[[ 1.37884628 -1.27288767]\n",
+      " [ 1.68273485 -0.99012673]\n",
+      " [-0.19371006 -0.39281772]\n",
+      " [-0.16617823  2.0633888 ]\n",
+      " [ 2.06208936  0.13445954]]\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -479,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.7717245984355092\n"
+      "-0.46252936136394207\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -502,11 +502,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.38872379 -1.38872379]\n",
-      " [-0.43601265 -0.43601265]\n",
-      " [-2.43252325 -2.43252325]\n",
-      " [-1.88940286 -1.88940286]\n",
-      " [-2.11360515 -2.11360515]]\n"
+      "[[-3.08693822 -3.08693822]\n",
+      " [-1.48463482 -1.48463482]\n",
+      " [ 0.06862939  0.06862939]\n",
+      " [ 1.20676758  1.20676758]\n",
+      " [ 0.84200573  0.84200573]]\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -634,7 +634,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
+      "0\n",
       "1.0\n"
      ]
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -679,8 +679,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.36507228  0.42198342 -0.29441486  0.12176386 -0.31285356]\n",
-      "[-0.31285356 -0.29441486  0.12176386  0.36507228  0.42198342]\n"
+      "[-0.87165424  0.00655795  0.14182679  0.99834989 -0.33161466]\n",
+      "[-0.87165424 -0.33161466  0.00655795  0.14182679  0.99834989]\n"
      ]
     }
    ],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -715,9 +715,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.47703112  0.22232594 -0.99845825  1.24360623  0.9456978 ]\n",
-      "[2 1 4 3 0]\n",
-      "[-0.99845825  0.22232594  0.9456978   1.24360623  1.47703112]\n"
+      "[ 0.59248151  0.9567148  -0.04862772  1.17408291  0.07148713]\n",
+      "[2 4 0 1 3]\n",
+      "[-0.04862772  0.07148713  0.59248151  0.9567148   1.17408291]\n"
      ]
     }
    ],
@@ -744,7 +744,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
